bugfix in percentPPI trester

--- a/percentPPI_Tester.ipynb
+++ b/percentPPI_Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f583c660",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "350cf2a6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "58a7b7d4",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "    \"gap_duration_4\":   4,\n",
     "    \"gap_duration_50\":  50,\n",
     "    \"gap_duration_8\":   8,\n",
-    "    \"offset_ASR\":       10,\n",
+    "    \"offset_ASR\":       None,\n",
     "    \"offset_PPI_10\":    10,\n",
     "    \"offset_PPI_12\":    12,\n",
     "    \"offset_PPI_14\":    14,\n",
@@ -59,21 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5fb560b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "prepulse_intensity = {\n",
     "\n",
-    "    \"ASR_control\":      None,\n",
+    "    \"ASR_control\":      120,\n",
     "    \"gap_depth\":        30,\n",
     "    \"gap_duration_10\":  60,\n",
     "    \"gap_duration_20\":  60,\n",
     "    \"gap_duration_4\":   60,\n",
     "    \"gap_duration_50\":  60,\n",
     "    \"gap_duration_8\":   60,\n",
-    "    \"offset_ASR\":       60,\n",
+    "    \"offset_ASR\":       0,\n",
     "    \"offset_PPI_10\":    0,\n",
     "    \"offset_PPI_12\":    0,\n",
     "    \"offset_PPI_14\":    0,\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9889a0b9",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "13a277ed",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "0298105d",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a7ce6b5d",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "896c37ba",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "34139f63",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "1910f31d",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4bd02e6a",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "6b12c28d",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "eab9fa18",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "caf3f78f",
    "metadata": {},
    "outputs": [
@@ -914,7 +914,13 @@
       "percentPPI_pos  False  True \n",
       "IPI_lt_20                   \n",
       "False               3     15\n",
-      "True                4     29\n",
+      "True                4     29\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Fisher's exact test: odds ratio = 1.45, p-value = 0.6864\n",
       "Proportion with percentPPI > 0 for IPI < 20: 0.88\n",
       "Proportion with percentPPI > 0 for IPI >= 20: 0.83\n",
@@ -1000,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "c9ff375a",
    "metadata": {},
    "outputs": [
@@ -1009,71 +1015,32 @@
      "output_type": "stream",
      "text": [
       "Prepulse intensity effects on all variables (excluding intensity == 0):\n",
-      "       sex     date            variable            test       stat         p  \\\n",
-      "6   female  April16                 RMS  Kruskal-Wallis   6.348052  0.041835   \n",
-      "8   female  April16                 AUC  Kruskal-Wallis   6.313420  0.042566   \n",
-      "9   female  April16          percentPPI  Kruskal-Wallis   7.574026  0.022663   \n",
-      "10  female  April16  prepulse_intensity  Kruskal-Wallis  20.000000  0.000045   \n",
-      "14  female   June26           peakValue  Kruskal-Wallis   7.391813  0.024825   \n",
-      "15  female   June26                PTPA  Kruskal-Wallis   7.387013  0.024885   \n",
-      "16  female   June26                PTTA  Kruskal-Wallis   7.428571  0.024373   \n",
-      "17  female   June26                 RMS  Kruskal-Wallis   7.428571  0.024373   \n",
-      "19  female   June26                 AUC  Kruskal-Wallis   7.802597  0.020216   \n",
-      "20  female   June26          percentPPI  Kruskal-Wallis   7.574026  0.022663   \n",
-      "21  female   June26  prepulse_intensity  Kruskal-Wallis  20.000000  0.000045   \n",
-      "31  female    May20          percentPPI  Kruskal-Wallis   7.574026  0.022663   \n",
-      "32  female    May20  prepulse_intensity  Kruskal-Wallis  20.000000  0.000045   \n",
-      "33    male  April16        reactionTime  Kruskal-Wallis   6.247157  0.043999   \n",
-      "42    male  April16          percentPPI  Kruskal-Wallis   6.220489  0.044590   \n",
-      "43    male  April16  prepulse_intensity  Kruskal-Wallis  20.000000  0.000045   \n",
-      "53    male   June26          percentPPI  Kruskal-Wallis   6.220489  0.044590   \n",
-      "54    male   June26  prepulse_intensity  Kruskal-Wallis  20.000000  0.000045   \n",
-      "64    male    May20          percentPPI  Kruskal-Wallis   6.220489  0.044590   \n",
-      "65    male    May20  prepulse_intensity  Kruskal-Wallis  20.000000  0.000045   \n",
+      "       sex     date    variable            test      stat         p  \\\n",
+      "9   female  April16  percentPPI  Kruskal-Wallis  7.574026  0.022663   \n",
+      "18  female   June26         AUC  Kruskal-Wallis  7.978667  0.046455   \n",
+      "19  female   June26  percentPPI  Kruskal-Wallis  7.574026  0.022663   \n",
+      "29  female    May20  percentPPI  Kruskal-Wallis  7.574026  0.022663   \n",
+      "39    male  April16  percentPPI  Kruskal-Wallis  6.220489  0.044590   \n",
+      "49    male   June26  percentPPI  Kruskal-Wallis  6.220489  0.044590   \n",
+      "59    male    May20  percentPPI  Kruskal-Wallis  6.220489  0.044590   \n",
       "\n",
       "    significant  posthoc_p posthoc_test  int1  int2  effect_strength  \\\n",
-      "6          True   0.043298         Dunn  60.0  80.0        -0.911111   \n",
-      "8          True   0.039383         Dunn  60.0  80.0        -0.911111   \n",
-      "9          True   0.017765         Dunn  60.0  80.0         1.000000   \n",
-      "10         True   0.000023         Dunn  30.0  80.0         1.000000   \n",
-      "14         True   0.020677         Dunn  60.0  80.0        -1.000000   \n",
-      "15         True   0.020731         Dunn  60.0  80.0        -1.000000   \n",
-      "16         True   0.019696         Dunn  60.0  80.0        -1.000000   \n",
-      "17         True   0.019696         Dunn  60.0  80.0        -1.000000   \n",
-      "19         True   0.016005         Dunn  60.0  80.0        -1.000000   \n",
-      "20         True   0.017765         Dunn  60.0  80.0         1.000000   \n",
-      "21         True   0.000023         Dunn  30.0  80.0         1.000000   \n",
-      "31         True   0.017765         Dunn  60.0  80.0         1.000000   \n",
-      "32         True   0.000023         Dunn  30.0  80.0         1.000000   \n",
-      "33         True   0.039624         Dunn  60.0  80.0        -0.822222   \n",
-      "42         True   0.053452         Dunn  30.0  80.0         1.000000   \n",
-      "43         True   0.000023         Dunn  30.0  80.0         1.000000   \n",
-      "53         True   0.053452         Dunn  30.0  80.0         1.000000   \n",
-      "54         True   0.000023         Dunn  30.0  80.0         1.000000   \n",
-      "64         True   0.053452         Dunn  30.0  80.0         1.000000   \n",
-      "65         True   0.000023         Dunn  30.0  80.0         1.000000   \n",
+      "9          True   0.017765         Dunn  60.0  80.0              1.0   \n",
+      "18         True   0.030421         Dunn  60.0  80.0             -1.0   \n",
+      "19         True   0.017765         Dunn  60.0  80.0              1.0   \n",
+      "29         True   0.017765         Dunn  60.0  80.0              1.0   \n",
+      "39         True   0.053452         Dunn  30.0  80.0              1.0   \n",
+      "49         True   0.053452         Dunn  30.0  80.0              1.0   \n",
+      "59         True   0.053452         Dunn  30.0  80.0              1.0   \n",
       "\n",
-      "      mean_diff  \n",
-      "6      9.671533  \n",
-      "8   2582.964633  \n",
-      "9    -30.086000  \n",
-      "10   -50.000000  \n",
-      "14    50.213333  \n",
-      "15    49.760233  \n",
-      "16    48.557267  \n",
-      "17    23.125767  \n",
-      "19  6189.842700  \n",
-      "20   -30.086000  \n",
-      "21   -50.000000  \n",
-      "31   -30.086000  \n",
-      "32   -50.000000  \n",
-      "33     3.202222  \n",
-      "42   -25.110000  \n",
-      "43   -50.000000  \n",
-      "53   -25.110000  \n",
-      "54   -50.000000  \n",
-      "64   -25.110000  \n",
-      "65   -50.000000  \n"
+      "    mean_diff  \n",
+      "9    -30.0860  \n",
+      "18  6189.8427  \n",
+      "19   -30.0860  \n",
+      "29   -30.0860  \n",
+      "39   -25.1100  \n",
+      "49   -25.1100  \n",
+      "59   -25.1100  \n"
      ]
     }
    ],
@@ -1146,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "a031158a",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "4d5140ac",
    "metadata": {},
    "outputs": [
@@ -1370,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "8f0b5046",
    "metadata": {},
    "outputs": [
@@ -1453,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "9b4d1a61",
    "metadata": {},
    "outputs": [
@@ -1528,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "a3d79a11",
    "metadata": {},
    "outputs": [
@@ -1663,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "50e2f88d",
    "metadata": {},
    "outputs": [
@@ -1701,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "bcc00a33",
    "metadata": {},
    "outputs": [
