--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "\n",
     "include_decay_fit = False # - - - - - - - - - - - - - - - - - - - - - -  include regular exponential decay in the output\n",
     "\n",
-    "output = False # - - - - - - - - - - - - - - - - - - - - - - - - - - - -  output results; set to False for testing if you do not want any change in output files when running the notebook\n",
+    "output = True # - - - - - - - - - - - - - - - - - - - - - - - - - - - -  output results; set to False for testing if you do not want any change in output files when running the notebook\n",
     "\n",
     "detection_threshold = 24 # - - - - - - - - - - - - - - - - - - - - - - - threshold multiplier for detecting peaks, ValueG has to exceed k times the background noise per animal\n",
     "\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
     "    \"gap_duration_4\":   4,\n",
     "    \"gap_duration_50\":  50,\n",
     "    \"gap_duration_8\":   8,\n",
-    "    \"offset_ASR\":       10,\n",
+    "    \"offset_ASR\":       None,\n",
     "    \"offset_PPI_10\":    10,\n",
     "    \"offset_PPI_12\":    12,\n",
     "    \"offset_PPI_14\":    14,\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
       "gap_duration_4: 10050\n",
       "gap_duration_50: 10050\n",
       "gap_duration_8: 10050\n",
-      "offset_ASR: 10000\n",
+      "offset_ASR: None\n",
       "offset_PPI_10: 10000\n",
       "offset_PPI_12: 10000\n",
       "offset_PPI_14: 10000\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "' \\n# ...existing code...\\n\\n# Mean noise across repetitions per experiment per animal\\nanimal_noise_mean = {}\\nfor animal, exp_dict in animal_noise_results.items():\\n    animal_noise_mean[animal] = {}\\n    for exp, noise_list in exp_dict.items():\\n        animal_noise_mean[animal][exp] = float(np.mean(noise_list))\\n\\n# Mean noise across experiments per animal\\nanimal_noise = {}\\nfor animal, exp_dict in animal_noise_mean.items():\\n    all_exp_values = list(exp_dict.values())\\n    if all_exp_values:\\n        animal_noise[animal] = round(float(np.mean(all_exp_values)), 2)\\n    else:\\n        animal_noise[animal] = None\\n\\nif verbose:\\n    print(f\"Collected background noise for {len(animal_noise)} animals (mean):\")\\n    print(animal_noise)\\n# ...existing code... '"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,8 @@
     "        order_rows.append(row)\n",
     "\n",
     "order_df = pd.DataFrame(order_rows)\n",
-    "order_df.to_excel(os.path.join(output_dir, \"SegmentOrder.xlsx\"), index=False)\n",
+    "if output:\n",
+    "    order_df.to_excel(os.path.join(output_dir, \"SegmentOrder.xlsx\"), index=False)\n",
     "\n",
     "if verbose:\n",
     "    print(\"Saved segment order to:\", os.path.join(output_dir, \"SegmentOrder.xlsx\"))"
@@ -565,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -718,14 +719,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Animal10': 0.94, 'Animal6': 0.95, 'Animal4': 0.94, 'Animal15': 0.89, 'Animal1': 0.94, 'Animal2': 0.95}\n"
+      "{'Animal1': 0.94, 'Animal2': 0.95, 'Animal10': 0.94, 'Animal4': 0.94, 'Animal6': 0.95, 'Animal15': 0.89}\n"
      ]
     }
    ],
@@ -752,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -989,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1031,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1323,9 +1324,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved results to: Peakfinder Results\n"
+     ]
+    }
+   ],
    "source": [
     "if output:\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
