--- a/percentPPI_Tester.ipynb
+++ b/percentPPI_Tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "f583c660",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "350cf2a6",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "58a7b7d4",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "5fb560b5",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "9889a0b9",
    "metadata": {},
    "outputs": [
@@ -98,9 +98,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw dataframes: ['RESULTS', 'RESULTS_MERGED', 'RESULTS_MERGED_DATE', 'RESULTS_MERGED_EXP', 'RESULTS_MTT', 'RESULTS_MTT_MERGED', 'RESULTS_MTT_MERGED_DATE', 'RESULTS_MTT_MERGED_EXP', 'RESULTS_TT', 'RESULTS_TT_MERGED', 'RESULTS_TT_MERGED_DATE', 'RESULTS_TT_MERGED_EXP']\n",
-      "Fit dataframes: ['RESULTS_FIT', 'RESULTS_MERGED_DATE_FIT', 'RESULTS_MERGED_EXP_FIT', 'RESULTS_MERGED_FIT', 'RESULTS_MTT_FIT', 'RESULTS_MTT_MERGED_DATE_FIT', 'RESULTS_MTT_MERGED_EXP_FIT', 'RESULTS_MTT_MERGED_FIT', 'RESULTS_TT_FIT', 'RESULTS_TT_MERGED_DATE_FIT', 'RESULTS_TT_MERGED_EXP_FIT', 'RESULTS_TT_MERGED_FIT']\n",
-      "Found 12 raw and 12 fit dataframes in Analyzer Results.\n",
+      "Raw dataframes: ['RESULTS', 'RESULTS_MERGED', 'RESULTS_MERGED_DATE', 'RESULTS_MERGED_EXP', 'RESULTS_MTT', 'RESULTS_MTT_MERGED', 'RESULTS_MTT_MERGED_DATE', 'RESULTS_MTT_MERGED_EXP', 'RESULTS_TT', 'RESULTS_TT_MERGED', 'RESULTS_TT_MERGED_DATE', 'RESULTS_TT_MERGED_EXP', 'SegmentOrder']\n",
+      "Fit dataframes: ['RESULTS_FIT', 'RESULTS_MERGED_DATE_FIT', 'RESULTS_MERGED_EXP_FIT', 'RESULTS_MERGED_FIT', 'RESULTS_MTT_FIT', 'RESULTS_MTT_MERGED_DATE_FIT', 'RESULTS_MTT_MERGED_EXP_FIT', 'RESULTS_MTT_MERGED_FIT', 'RESULTS_TT_FIT', 'RESULTS_TT_MERGED_DATE_FIT', 'RESULTS_TT_MERGED_EXP_FIT', 'RESULTS_TT_MERGED_FIT', 'SegmentOrder_FIT']\n",
+      "Found 13 raw and 13 fit dataframes in Analyzer Results.\n",
       "\n",
       "Found 18 experiments, 10 variables and 4 parameters:\n",
       " ASR_control, gap_depth, tone_in_noise, gap_duration_4, gap_duration_8, gap_duration_10, gap_duration_20, gap_duration_50, offset_PPI_4, offset_PPI_6, offset_PPI_8, offset_PPI_10, offset_PPI_12, offset_PPI_14, offset_PPI_16, offset_PPI_18, offset_PPI_20, offset_PPI_50\n",
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "13a277ed",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "0298105d",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "a7ce6b5d",
    "metadata": {},
    "outputs": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "896c37ba",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "34139f63",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "1910f31d",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "4bd02e6a",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "6b12c28d",
    "metadata": {},
    "outputs": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "eab9fa18",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "caf3f78f",
    "metadata": {},
    "outputs": [
@@ -914,13 +914,7 @@
       "percentPPI_pos  False  True \n",
       "IPI_lt_20                   \n",
       "False               3     15\n",
-      "True                4     29\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "True                4     29\n",
       "Fisher's exact test: odds ratio = 1.45, p-value = 0.6864\n",
       "Proportion with percentPPI > 0 for IPI < 20: 0.88\n",
       "Proportion with percentPPI > 0 for IPI >= 20: 0.83\n",
@@ -1006,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "c9ff375a",
    "metadata": {},
    "outputs": [
@@ -1017,7 +1011,6 @@
       "Prepulse intensity effects on all variables (excluding intensity == 0):\n",
       "       sex     date    variable            test      stat         p  \\\n",
       "9   female  April16  percentPPI  Kruskal-Wallis  7.574026  0.022663   \n",
-      "18  female   June26         AUC  Kruskal-Wallis  7.978667  0.046455   \n",
       "19  female   June26  percentPPI  Kruskal-Wallis  7.574026  0.022663   \n",
       "29  female    May20  percentPPI  Kruskal-Wallis  7.574026  0.022663   \n",
       "39    male  April16  percentPPI  Kruskal-Wallis  6.220489  0.044590   \n",
@@ -1026,7 +1019,6 @@
       "\n",
       "    significant  posthoc_p posthoc_test  int1  int2  effect_strength  \\\n",
       "9          True   0.017765         Dunn  60.0  80.0              1.0   \n",
-      "18         True   0.030421         Dunn  60.0  80.0             -1.0   \n",
       "19         True   0.017765         Dunn  60.0  80.0              1.0   \n",
       "29         True   0.017765         Dunn  60.0  80.0              1.0   \n",
       "39         True   0.053452         Dunn  30.0  80.0              1.0   \n",
@@ -1034,13 +1026,12 @@
       "59         True   0.053452         Dunn  30.0  80.0              1.0   \n",
       "\n",
       "    mean_diff  \n",
-      "9    -30.0860  \n",
-      "18  6189.8427  \n",
-      "19   -30.0860  \n",
-      "29   -30.0860  \n",
-      "39   -25.1100  \n",
-      "49   -25.1100  \n",
-      "59   -25.1100  \n"
+      "9     -30.086  \n",
+      "19    -30.086  \n",
+      "29    -30.086  \n",
+      "39    -25.110  \n",
+      "49    -25.110  \n",
+      "59    -25.110  \n"
      ]
     }
    ],
@@ -1113,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "a031158a",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "4d5140ac",
    "metadata": {},
    "outputs": [
@@ -1337,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "8f0b5046",
    "metadata": {},
    "outputs": [
@@ -1420,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "9b4d1a61",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "a3d79a11",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "50e2f88d",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "bcc00a33",
    "metadata": {},
    "outputs": [
